# decentralised-social-media

./: .gitignore
backend/: bundler.js  package-lock.json  package.json  script.js  test_api.js  test_api_2.js
backend/APIs/: interaction_submit.js  wallet_submit.js
blockchain-core/: .gitignore  CMakeLists.txt  Makefile
blockchain-core/include/: block.h  blockchain.h  consensus.h  crypto.h  network.h  transaction.h  validator.h
blockchain-core/src/: block.cpp  blockchain.cpp  consensus.cpp  crypto.cpp  main.cpp  network.cpp  validator.cpp
frontend/: Makefile  main
frontend/include/: feed.h  wallet.h
frontend/src/: feed.cpp  main.cpp  wallet.cpp
